# frame

./: .gitignore  AGENTS.md  Cargo.toml  MILESTONES.md  README.md  TODO-CSS.md  TODO-DOM.md  TODO.md  build.sh
.claude/: settings.local.json
crates/frame_cli/: Cargo.toml
crates/frame_cli/src/: args.rs  diagnostics.rs  include.rs  main.rs  project.rs  theme.rs
crates/frame_cli/src/commands/: build.rs  check.rs  compile.rs  doctor.rs  emit.rs  format.rs  init.rs  mod.rs  new.rs  watch.rs
crates/frame_cli/tests/: cli.rs  golden.rs
crates/frame_cli/tests/fixtures/: conditional.frame  dashboard-layout.frame  events.frame  keyed-list.frame  media-url.frame  nested-components.frame  page-root-styling.frame  props-state.frame  semantic-primitives.frame  simple-component.frame  style-bindings.frame  valid_current_language.frame
docs/: accessibility-model.md  accessibility.md  advanced-styling.md  animations.md  app-vocabulary.md  areas.md  borders.md  cards.md  code-actions.md  colors.md  contributing.md  diagnostics.md  effects.md  examples.md  feature-sweep.md  forms.md  gradients.md  grid.md  imports.md  interactions.md  ir-spec.md  language-redesign.md  language-surface-audit.md  language.md  layout-system.md  layout.md  lsp.md  positioning.md  runtime-architecture.md  security.md  semantic-lowering.md  setup.md  sizing.md  spacing.md  style-blocks.md  surfaces.md  svelte.md  tokens.md  typography.md  ui-primitives.md  (+1 more)
examples/: semantic-chat.frame  semantic-dashboard.frame  semantic-settings-dialog.frame
research/: README.md  architecture.md  contracts.md  (+7 more)
(+210 files in other folders)
