[workspace]
resolver = "2"
members = [
  "crates/frame_core",
  "crates/frame_parser",
  "crates/frame_codegen",
  "crates/frame_runtime",
  "crates/frame_cli",
  "crates/frame_lsp",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ThatOneToast/frame"
authors = ["ThatOneToast"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20"
notify = "7"
